--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ar.edu.utn.dds.k3003</groupId>
-  <artifactId>my-app-name</artifactId>
+  <artifactId>entregatp1</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
