--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ar.edu.utn.dds.k3003</groupId>
-  <artifactId>entregatp1</artifactId>
+  <artifactId>entregatp2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -18,9 +18,32 @@
     <!-- Dependencies versions -->
     <junit.version>5.10.2</junit.version>
     <mockito.version>5.11.0</mockito.version>
+
+    <!-- Dependencies versions -->
+    <javalin.version>5.6.5</javalin.version>
+    <junit.version>5.10.2</junit.version>
+    <mockito.version>5.11.0</mockito.version>
+    <retrofit.version>2.11.0</retrofit.version>
+    <slf4j.version>2.0.13</slf4j.version>
   </properties>
 
-  <dependencies>
+<build>
+<plugins>
+  <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <configuration>
+      <finalName>TPDDSApp</finalName>
+      <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+      </descriptorRefs>
+      <appendAssemblyId>false</appendAssemblyId>
+    </configuration>
+  </plugin>
+</plugins>
+</build>
+
+
+<dependencies>
     <!-- Libs -->
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -28,6 +51,29 @@
       <version>2.16.0</version>
     </dependency>
 
+  <dependency>
+    <groupId>com.squareup.retrofit2</groupId>
+    <artifactId>retrofit</artifactId>
+    <version>${retrofit.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>com.squareup.retrofit2</groupId>
+    <artifactId>converter-jackson</artifactId>
+    <version>${retrofit.version}</version>
+  </dependency>
+
+
+  <dependency>
+    <groupId>io.javalin</groupId>
+    <artifactId>javalin</artifactId>
+    <version>${javalin.version}</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>${slf4j.version}</version>
+  </dependency>
     <!-- Tools -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -45,7 +91,7 @@
     <dependency>
       <groupId>com.github.ezequieljsosa</groupId>
       <artifactId>dds-eval-tp2024</artifactId>
-      <version>0.0.14</version>
+      <version>0.0.18</version>
     </dependency>
 
   </dependencies>
