--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Enciende el WebApp
         id: start-webapp
         run: |
-          mvn exec:java -D"exec.mainClass=ar.edu.utn.dds.k3003.app.WebApp" &
+          mvn exec:java -Dexec.mainClass="ar.edu.utn.dds.k3003.app.WebApp" &
           echo "WebApp Server PID=$!" >> $GITHUB_ENV
         env:
           MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
@@ -52,7 +52,7 @@ jobs:
         with:
           test-name: Evaluator
           setup-command: mvn clean compile
-          command: mvn exec:java -D"exec.mainClass=ar.edu.utn.dds.k3003.Evaluador"
+          command: mvn exec:java -Dexec.mainClass="ar.edu.utn.dds.k3003.Evaluador"
           timeout: 10
           max-score: 4
       - name: Determinar el tipo de fachada
@@ -75,7 +75,7 @@ jobs:
         with:
           test-name: EvaluatorAPI
           setup-command: mvn clean compile
-          command: mvn exec:java -D"exec.mainClass=ar.edu.utn.dds.k3003.EvaluadorAPI" -D"exec.args=http://localhost:8080 ${{ env.EVALUATOR_API_ARG }}"
+          command: mvn exec:java -Dexec.mainClass="ar.edu.utn.dds.k3003.EvaluadorAPI" -Dexec.args="http://localhost:8080 ${{ env.EVALUATOR_API_ARG }}"
           timeout: 10
           max-score: 1
 
